# QPulse

./: README.md  pyproject.toml
docs/: generate_figures.py
notebooks/: 01_drag_analysis.ipynb
qpulse/: __init__.py  metrics.py  optimizer.py  pulses.py  transmon.py  utils.py
qpulse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_transmon.py
