[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qpulse"
version = "0.1.0"
description = "DRAG pulse simulation for transmon qubits"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "qutip>=5.0",
    "matplotlib>=3.8",
    "jupyter>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["qpulse*"]
